[gd_scene load_steps=4 format=3 uid="uid://bdtit0flpgvth"]

[ext_resource type="Script" path="res://scenes/ai/storm.gd" id="1_u85mp"]
[ext_resource type="Texture2D" uid="uid://c44mf2j1x3lge" path="res://icon.svg" id="2_0uphp"]

[sub_resource type="CircleShape2D" id="CircleShape2D_56jp1"]
radius = 91.2688

[node name="Storm" type="Area2D"]
script = ExtResource("1_u85mp")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_56jp1")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_0uphp")

[node name="DamageTick" type="Timer" parent="."]
one_shot = true
autostart = true

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
[connection signal="timeout" from="DamageTick" to="." method="_on_damage_tick_timeout"]
